# dlspringer

./: README.md  pyproject.toml
src/dlspringer/: book.py  dl.py
tests/: test_dlspringer.py
